added to PDP js to make coloured block selectable and change product images to match colour

--- a/HTML/Header-links/All.html
+++ b/HTML/Header-links/All.html
@@ -251,9 +251,9 @@
             <div class="tab-header">
               <p class="product-header-size">N1ghtW0lf04 Cap</p>
               <span class="available-colours position-blocks">
-                <div class="coloured-blocks blue-block"></div>
-                <div class="coloured-blocks white-block"></div>
-                <div class="coloured-blocks red-block"></div>
+                <div class="coloured-blocks" id="blue-block"></div>
+                <div class="coloured-blocks" id="white-block"></div>
+                <div class="coloured-blocks" id="Grey-block"></div>
               </span>
             </div>
             <div class="Product-description">
@@ -353,9 +353,9 @@
             <div class="tab-header">
               <p class="product-header-size">Midge Bucket Hat</p>
               <span class="available-colours position-blocks">
-                <div class="coloured-blocks black-block"></div>
-                <div class="coloured-blocks white-block"></div>
-                <div class="coloured-blocks red-block"></div>
+                <div class="coloured-blocks" id="black-block"></div>
+                <div class="coloured-blocks" id="white-block"></div>
+                <div class="coloured-blocks" id="red-block"></div>
               </span>
             </div>
             <div class="Product-description">
@@ -453,9 +453,9 @@
             <div class="tab-header">
               <p class="product-header-size">FerralWolf Dad Cap</p>
               <span class="available-colours position-blocks">
-                <div class="coloured-blocks black-block"></div>
-                <div class="coloured-blocks white-block"></div>
-                <div class="coloured-blocks red-block"></div>
+                <div class="coloured-blocks" id="black-block"></div>
+                <div class="coloured-blocks" id="white-block"></div>
+                <div class="coloured-blocks" id="red-block"></div>
               </span>
             </div>
             <div class="Product-description">
@@ -553,9 +553,9 @@
             <div class="tab-header">
               <p class="product-header-size">N1ghtW0lf04 Jumper</p>
               <span class="available-colours position-blocks">
-                <div class="coloured-blocks black-block"></div>
-                <div class="coloured-blocks white-block"></div>
-                <div class="coloured-blocks red-block"></div>
+                <div class="coloured-blocks" id=" black-block"></div>
+                <div class="coloured-blocks" id="white-block"></div>
+                <div class="coloured-blocks" id="red-block"></div>
               </span>
             </div>
             <div class="Product-description">
@@ -655,9 +655,9 @@
             <div class="tab-header">
               <p class="product-header-size">N1ghtW0lf04 Hoodie</p>
               <span class="available-colours position-blocks">
-                <div class="coloured-blocks black-block"></div>
-                <div class="coloured-blocks White-block"></div>
-                <div class="coloured-blocks Grey-block"></div>
+                <div class="coloured-blocks" id="black-block"></div>
+                <div class="coloured-blocks" id="White-block"></div>
+                <div class="coloured-blocks" id="Grey-block"></div>
               </span>
             </div>
             <div class="Product-description">
@@ -759,9 +759,9 @@
             <div class="tab-header">
               <p class="product-header-size">JellyBellyYT Hoodie</p>
               <span class="available-colours position-blocks">
-                <div class="coloured-blocks black-block"></div>
-                <div class="coloured-blocks Grey-block"></div>
-                <div class="coloured-blocks red-block"></div>
+                <div class="coloured-blocks" id="black-block"></div>
+                <div class="coloured-blocks" id="Grey-block"></div>
+                <div class="coloured-blocks" id="red-block"></div>
               </span>
             </div>
             <div class="Product-description">
@@ -863,9 +863,9 @@
             <div class="tab-header">
               <p class="product-header-size">FerralWolf2003 Hoodie</p>
               <span class="available-colours position-blocks">
-                <div class="coloured-blocks black-block"></div>
-                <div class="coloured-blocks white-block"></div>
-                <div class="coloured-blocks red-block"></div>
+                <div class="coloured-blocks" id="black-block"></div>
+                <div class="coloured-blocks" id="white-block"></div>
+                <div class="coloured-blocks" id="red-block"></div>
               </span>
             </div>
             <div class="Product-description">
@@ -967,9 +967,9 @@
             <div class="tab-header">
               <p class="product-header-size">S-I-S SQUAD Hoodie</p>
               <span class="available-colours position-blocks">
-                <div class="coloured-blocks black-block"></div>
-                <div class="coloured-blocks White-block"></div>
-                <div class="coloured-blocks red-block"></div>
+                <div class="coloured-blocks" id="black-block"></div>
+                <div class="coloured-blocks" id="White-block"></div>
+                <div class="coloured-blocks" id="red-block"></div>
               </span>
             </div>
             <div class="Product-description">
