--- a/HTML/Products/N1ghtW0lf04/Hats/LE-nightwolf-cap.html
+++ b/HTML/Products/N1ghtW0lf04/Hats/LE-nightwolf-cap.html
@@ -92,7 +92,10 @@
           <div class="Product-img-large">
             <div id="img-large" class="LE-NW-base-image-hat LE-NW-CAP"></div>
           </div>
-          <div class="Product-img-collage">
+          <div
+            id="collage-block-1"
+            class="Product-img-collage three-lane-collage"
+          >
             <span class="collage-block">
               <img
                 src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Femodel-Blue.jpg"
@@ -114,6 +117,11 @@
                 id="LE-NW-man-blue"
               />
             </span>
+          </div>
+          <div
+            id="collage-block-2"
+            class="Product-img-collage three-lane-collage hidden-images"
+          >
             <span class="collage-block">
               <img
                 src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Femodel.jpg"
@@ -136,6 +144,32 @@
               />
             </span>
           </div>
+          <div
+            id="collage-block-3"
+            class="Product-img-collage three-lane-collage hidden-images"
+          >
+            <span class="collage-block">
+              <img
+                src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Femodel-White.jpg"
+                class="img-small"
+                id="LE-NW-fem-white"
+              />
+            </span>
+            <span id="collage-block-1" class="collage-block">
+              <img
+                src="/Images/Merch/N1ghtW0lf04/Hats/LE-Nightwolf-cap-front-White.png"
+                class="img-small"
+                id="LE-NW-front-white"
+              />
+            </span>
+            <span class="collage-block">
+              <img
+                src="/Images/Merch/N1ghtW0lf04/Hats/PDP/LE-Nightwolf-Cap-Mamodel-White.jpg"
+                class="img-small"
+                id="LE-NW-man-white"
+              />
+            </span>
+          </div>
         </div>
         <span class="product-details">
           <h1 class="product-head small-prod-head">
@@ -149,9 +183,9 @@
           </p>
 
           <span class="available-colours position-blocks block-margin">
-            <div class="coloured-blocks blue-block"></div>
-            <div class="coloured-blocks White-block"></div>
-            <div class="coloured-blocks Grey-block"></div>
+            <div class="coloured-blocks" id="blue-block"></div>
+            <div class="coloured-blocks" id="White-block"></div>
+            <div class="coloured-blocks" id="Grey-block"></div>
           </span>
 
           <div class="">
