--- a/Home.html
+++ b/Home.html
@@ -539,7 +539,7 @@
         </div>
       </div>
       <div class="view-all">
-        <a href="HTML/All.html" class="All-btn">View All</a>
+        <a href="HTML/Header-links/All.html" class="All-btn">View All</a>
       </div>
     </section>
     <footer class="footer">
