fixed PDP with missing coloured block

--- a/Home.html
+++ b/Home.html
@@ -200,9 +200,9 @@
             </span>
             <p class="colours">Available Colours</p>
             <span class="available-colours">
-              <div class="coloured-blocks black-block"></div>
-              <div class="coloured-blocks White-block"></div>
-              <div class="coloured-blocks Grey-block"></div>
+              <div class="coloured-blocks" id="black-block"></div>
+              <div class="coloured-blocks" id="White-block"></div>
+              <div class="coloured-blocks" id="Grey-block"></div>
             </span>
             <span class="pricing">
               <p class="original-price">£54.99</p>
@@ -292,9 +292,9 @@
             </span>
             <p class="colours">Available Colours</p>
             <span class="available-colours">
-              <div class="coloured-blocks black-block"></div>
-              <div class="coloured-blocks red-block"></div>
-              <div class="coloured-blocks Grey-block"></div>
+              <div class="coloured-blocks" id="black-block"></div>
+              <div class="coloured-blocks" id="red-block"></div>
+              <div class="coloured-blocks" id="Grey-block"></div>
             </span>
             <span class="pricing">
               <p class="original-price">£54.99</p>
@@ -384,9 +384,9 @@
             </span>
             <p class="colours">Available Colours</p>
             <span class="available-colours">
-              <div class="coloured-blocks black-block"></div>
-              <div class="coloured-blocks White-block"></div>
-              <div class="coloured-blocks red-block"></div>
+              <div class="coloured-blocks" id="black-block"></div>
+              <div class="coloured-blocks" id="White-block"></div>
+              <div class="coloured-blocks" id="red-block"></div>
             </span>
             <span class="pricing">
               <p class="original-price">£54.99</p>
@@ -476,9 +476,9 @@
             </span>
             <p class="colours">Available Colours</p>
             <span class="available-colours">
-              <div class="coloured-blocks black-block"></div>
-              <div class="coloured-blocks White-block"></div>
-              <div class="coloured-blocks Grey-block"></div>
+              <div class="coloured-blocks" id="black-block"></div>
+              <div class="coloured-blocks" id="White-block"></div>
+              <div class="coloured-blocks" id="Grey-block"></div>
             </span>
             <span class="pricing">
               <p class="original-price">£59.99</p>
