--- a/Home.html
+++ b/Home.html
@@ -79,28 +79,11 @@
                   clip-rule="evenodd"
                 />
               </svg>
-              <div class="cartProduct-container">
-                <div class="cartProduct-info">
-                  <img
-                    src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
-                    alt="product image"
-                    class="cartProduct-img"
-                  />
-                  <div class="cartProduct-data">
-                    <h3 id="cartProduct-title" class="cartProduct-title">
-                      Classic N1ghtW0lf04 Hoodie
-                    </h3>
-                    <p class="cartProduct-price" id="cartProduct-price">
-                      £44.99
-                    </p>
-                    <p class="productSize" id="productSize">Size: M</p>
-                    <p class="product-quantity" id="productQuantity">
-                      Quantity: 9
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <!-- <p class="empty-cart">Your Cart is empty</p> -->
+              <div
+                id="cartProduct-container"
+                class="cartProduct-container"
+              ></div>
+              <p class="empty-cart">Your Cart is empty</p>
               <button class="checkout-btn">checkout</button>
             </span>
           </div>
