--- a/Home.html
+++ b/Home.html
@@ -7,6 +7,10 @@
       href="/Style/Page styles/Banner-links/All-Products.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
     <link href="Style/Page styles/Banner-links/Home.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -179,17 +183,12 @@
         <div class="Product-tab">
           <img
             src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
-            class="hoodie"
+            class="hoodie product-image"
             alt="hoodie"
-            id="product-image"
             name="image"
           />
           <div class="Product-description">
-            <p
-              name="Classic-NW-Hoodie"
-              id="product-Title"
-              class="product-header"
-            >
+            <p name="Classic-NW-Hoodie" class="product-header product-Title">
               Classic N1ghtW0lf04 Hoodie
             </p>
             <span class="shipping">
@@ -218,7 +217,7 @@
             </span>
             <span class="pricing">
               <p class="original-price">£54.99</p>
-              <p name="price" id="product-price" class="sale-price">£44.99</p>
+              <p name="price" class="sale-price product-price">£44.99</p>
             </span>
             <span class="product-page-links">
               <a
@@ -227,7 +226,7 @@
                 >More Info</a
               >
             </span>
-            <form id="product-form" class="product-form">
+            <form class="product-form">
               <div class="form-grid">
                 <div class="clothes-sizing-label">
                   <label class="product-label size-label" for="Sizes"
@@ -240,7 +239,6 @@
                     name="Sizes"
                     class="product-input sizes-input"
                   >
-                    <option>More options</option>
                     <option value="small">S</option>
                     <option value="medium">M</option>
                     <option value="large">L</option>
@@ -265,7 +263,7 @@
                 </div>
               </div>
               <div class="product-btn">
-                <button type="button" id="add-Cart" class="cart-btn">
+                <button type="button" class="add-Cart cart-btn">
                   <ion-icon name="cart"></ion-icon>
                   Add to cart
                 </button>
@@ -276,14 +274,18 @@
             </span>
           </div>
         </div>
+
         <div class="Product-tab">
           <img
             src="/Images/Merch/JellyBelly/Hoodie/JellyBellyyt hoodie.png"
-            class="hoodie"
+            class="hoodie product-image"
             alt="hoodie"
+            name="image"
           />
           <div class="Product-description">
-            <p class="product-header">Classic JellyBellyYT Hoodie</p>
+            <p name="Classic-JB-Hoodie" class="product-header product-Title">
+              Classic JellyBellyYT Hoodie
+            </p>
             <span class="shipping">
               <svg
                 class="lorrie"
@@ -310,7 +312,7 @@
             </span>
             <span class="pricing">
               <p class="original-price">£54.99</p>
-              <p class="sale-price">£44.99</p>
+              <p name="price" class="sale-price product-price">£44.99</p>
             </span>
             <span class="product-page-links">
               <a
@@ -332,11 +334,10 @@
                     name="Sizes"
                     class="product-input sizes-input"
                   >
-                    <option>More options</option>
-                    <option>S</option>
-                    <option>M</option>
-                    <option>L</option>
-                    <option>XL</option>
+                    <option value="small">S</option>
+                    <option value="medium">M</option>
+                    <option value="large">L</option>
+                    <option value="extra-large">XL</option>
                   </select>
                 </div>
                 <div class="clothes-quantity-label">
@@ -352,12 +353,12 @@
                     name="quantity"
                     min="1"
                     max="10"
-                    value="1"
+                    placeholder="1"
                   />
                 </div>
               </div>
               <div class="product-btn">
-                <button class="cart-btn">
+                <button type="button" class="add-Cart cart-btn">
                   <ion-icon name="cart"></ion-icon>
                   Add to cart
                 </button>
@@ -370,104 +371,15 @@
         </div>
         <div class="Product-tab">
           <img
-            src="/Images/Merch/FerralWolf/Hoodie/FerralWolf2003 hoodie.png"
-            class="hoodie"
+            src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
+            class="hoodie product-image"
             alt="hoodie"
+            name="image"
           />
           <div class="Product-description">
-            <p class="product-header">FerralWolf2003 Hoodie</p>
-            <span class="shipping">
-              <svg
-                class="lorrie"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="w-6 h-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
-                />
-              </svg>
-              <p class="free">Free Shipping</p>
-            </span>
-            <p class="colours">Available Colours</p>
-            <span class="available-colours">
-              <div class="coloured-blocks" id="black-block"></div>
-              <div class="coloured-blocks" id="White-block"></div>
-              <div class="coloured-blocks" id="red-block"></div>
-            </span>
-            <span class="pricing">
-              <p class="original-price">£54.99</p>
-              <p class="sale-price">£44.99</p>
-            </span>
-            <span class="product-page-links">
-              <a
-                href="/HTML/Products/FerralWolf/Hoodies/Ferralwolf2003-eco-hoodie.html"
-                class="product-page-link"
-                >More Info</a
-              >
-            </span>
-            <form class="product-form">
-              <div class="form-grid">
-                <div class="clothes-sizing-label">
-                  <label class="product-label size-label" for="Sizes"
-                    >Sizes</label
-                  >
-                </div>
-                <div class="clothes-sizing-select">
-                  <select
-                    required
-                    name="Sizes"
-                    class="product-input sizes-input"
-                  >
-                    <option>More options</option>
-                    <option>S</option>
-                    <option>M</option>
-                    <option>L</option>
-                    <option>XL</option>
-                  </select>
-                </div>
-                <div class="clothes-quantity-label">
-                  <label for="quantity" class="product-label quantity-label"
-                    >Quantity</label
-                  >
-                </div>
-                <div class="clothes-quantity-input">
-                  <input
-                    required
-                    type="number"
-                    class="product-input quantity"
-                    name="quantity"
-                    min="1"
-                    max="10"
-                    value="1"
-                  />
-                </div>
-              </div>
-              <div class="product-btn">
-                <button class="cart-btn">
-                  <ion-icon name="cart"></ion-icon>
-                  Add to cart
-                </button>
-              </div>
-            </form>
-            <span>
-              <p class="exclusive Warning-banner-limited">Eco-Friendly</p>
-            </span>
-          </div>
-        </div>
-        <div class="Product-tab">
-          <img
-            src="/Images/Merch/Team/Hoodie/SIS hoodie.png"
-            class="hoodie"
-            alt="hoodie"
-          />
-          <div class="Product-description">
-            <p class="product-header">S-I-S SQUAD Hoodie</p>
+            <p name="Classic-NW-Hoodie" class="product-header product-Title">
+              Classic N1ghtW0lf04 Hoodie
+            </p>
             <span class="shipping">
               <svg
                 class="lorrie"
@@ -493,12 +405,12 @@
               <div class="coloured-blocks" id="Grey-block"></div>
             </span>
             <span class="pricing">
-              <p class="original-price">£59.99</p>
-              <p class="sale-price">£49.99</p>
+              <p class="original-price">£54.99</p>
+              <p name="price" class="sale-price product-price">£44.99</p>
             </span>
             <span class="product-page-links">
               <a
-                href="/HTML/Products/Team/Hoodies/sis-squad-team-hoodie.html"
+                href="/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04-hoodie.html"
                 class="product-page-link"
                 >More Info</a
               >
@@ -516,11 +428,10 @@
                     name="Sizes"
                     class="product-input sizes-input"
                   >
-                    <option>More options</option>
-                    <option>S</option>
-                    <option>M</option>
-                    <option>L</option>
-                    <option>XL</option>
+                    <option value="small">S</option>
+                    <option value="medium">M</option>
+                    <option value="large">L</option>
+                    <option value="extra-large">XL</option>
                   </select>
                 </div>
                 <div class="clothes-quantity-label">
@@ -536,17 +447,114 @@
                     name="quantity"
                     min="1"
                     max="10"
-                    value="1"
+                    placeholder="1"
                   />
                 </div>
               </div>
               <div class="product-btn">
-                <button class="cart-btn">
+                <button type="button" class="add-Cart cart-btn">
                   <ion-icon name="cart"></ion-icon>
                   Add to cart
                 </button>
               </div>
             </form>
+            <span>
+              <p class="Limited Warning-banner-limited">Eco-Friendly</p>
+            </span>
+          </div>
+        </div>
+        <div class="Product-tab">
+          <img
+            src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
+            class="hoodie product-image"
+            alt="hoodie"
+            name="image"
+          />
+          <div class="Product-description">
+            <p name="Classic-NW-Hoodie" class="product-header product-Title">
+              Classic N1ghtW0lf04 Hoodie
+            </p>
+            <span class="shipping">
+              <svg
+                class="lorrie"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="w-6 h-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M8.25 18.75a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 0 1-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 0 1-3 0m3 0a1.5 1.5 0 0 0-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 0 0-3.213-9.193 2.056 2.056 0 0 0-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 0 0-10.026 0 1.106 1.106 0 0 0-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12"
+                />
+              </svg>
+              <p class="free">Free Shipping</p>
+            </span>
+            <p class="colours">Available Colours</p>
+            <span class="available-colours">
+              <div class="coloured-blocks" id="black-block"></div>
+              <div class="coloured-blocks" id="White-block"></div>
+              <div class="coloured-blocks" id="Grey-block"></div>
+            </span>
+            <span class="pricing">
+              <p class="original-price">£54.99</p>
+              <p name="price" class="sale-price product-price">£44.99</p>
+            </span>
+            <span class="product-page-links">
+              <a
+                href="/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04-hoodie.html"
+                class="product-page-link"
+                >More Info</a
+              >
+            </span>
+            <form class="product-form">
+              <div class="form-grid">
+                <div class="clothes-sizing-label">
+                  <label class="product-label size-label" for="Sizes"
+                    >Sizes</label
+                  >
+                </div>
+                <div class="clothes-sizing-select">
+                  <select
+                    required
+                    name="Sizes"
+                    class="product-input sizes-input"
+                  >
+                    <option value="small">S</option>
+                    <option value="medium">M</option>
+                    <option value="large">L</option>
+                    <option value="extra-large">XL</option>
+                  </select>
+                </div>
+                <div class="clothes-quantity-label">
+                  <label for="quantity" class="product-label quantity-label"
+                    >Quantity</label
+                  >
+                </div>
+                <div class="clothes-quantity-input">
+                  <input
+                    required
+                    type="number"
+                    class="product-input quantity"
+                    name="quantity"
+                    min="1"
+                    max="10"
+                    placeholder="1"
+                  />
+                </div>
+              </div>
+              <div class="product-btn">
+                <button type="button" class="add-Cart cart-btn">
+                  <ion-icon name="cart"></ion-icon>
+                  Add to cart
+                </button>
+              </div>
+            </form>
+            <span>
+              <p class="Limited Warning-banner-limited">Eco-Friendly</p>
+            </span>
           </div>
         </div>
       </div>
