items can now be removed from the basket

--- a/Home.html
+++ b/Home.html
@@ -54,6 +54,7 @@
                 />
               </form>
             </div>
+
             <div class="tabs">
               <a href="HTML/Header-links/All.html" class="navigation-link All"
                 >View All</a
@@ -70,26 +71,26 @@
             </div>
           </div>
           <div id="basket-tab" class="hidden-tab">
-            <span class="basket-contents">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                fill="currentColor"
-                id="close"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm-1.72 6.97a.75.75 0 1 0-1.06 1.06L10.94 12l-1.72 1.72a.75.75 0 1 0 1.06 1.06L12 13.06l1.72 1.72a.75.75 0 1 0 1.06-1.06L13.06 12l1.72-1.72a.75.75 0 1 0-1.06-1.06L12 10.94l-1.72-1.72Z"
-                  clip-rule="evenodd"
-                />
-              </svg>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              id="close"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm-1.72 6.97a.75.75 0 1 0-1.06 1.06L10.94 12l-1.72 1.72a.75.75 0 1 0 1.06 1.06L12 13.06l1.72 1.72a.75.75 0 1 0 1.06-1.06L13.06 12l1.72-1.72a.75.75 0 1 0-1.06-1.06L12 10.94l-1.72-1.72Z"
+                clip-rule="evenodd"
+              />
+            </svg>
+            <div class="basket-contents">
               <div
                 id="cartProduct-container"
                 class="cartProduct-container"
               ></div>
               <p class="empty-cart">Your Cart is empty</p>
               <button class="checkout-btn">checkout</button>
-            </span>
+            </div>
           </div>
         </div>
         <div class="Welcome">
@@ -371,14 +372,14 @@
         </div>
         <div class="Product-tab">
           <img
-            src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
+            src="/Images/Merch/FerralWolf/Hoodie/FerralWolf2003 hoodie.png"
             class="hoodie product-image"
             alt="hoodie"
             name="image"
           />
           <div class="Product-description">
             <p name="Classic-NW-Hoodie" class="product-header product-Title">
-              Classic N1ghtW0lf04 Hoodie
+              Classic FerralWolf Hoodie
             </p>
             <span class="shipping">
               <svg
@@ -402,7 +403,7 @@
             <span class="available-colours">
               <div class="coloured-blocks" id="black-block"></div>
               <div class="coloured-blocks" id="White-block"></div>
-              <div class="coloured-blocks" id="Grey-block"></div>
+              <div class="coloured-blocks" id="red-block"></div>
             </span>
             <span class="pricing">
               <p class="original-price">£54.99</p>
@@ -410,7 +411,7 @@
             </span>
             <span class="product-page-links">
               <a
-                href="/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04-hoodie.html"
+                href="/HTML/Products/FerralWolf/Hoodies/Ferralwolf2003-eco-hoodie.html"
                 class="product-page-link"
                 >More Info</a
               >
@@ -459,20 +460,20 @@
               </div>
             </form>
             <span>
-              <p class="Limited Warning-banner-limited">Eco-Friendly</p>
+              <p class="exclusive Warning-banner-limited">Exclusive</p>
             </span>
           </div>
         </div>
         <div class="Product-tab">
           <img
-            src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
+            src="/Images/Merch/Team/Hoodie/SIS hoodie.png"
             class="hoodie product-image"
             alt="hoodie"
             name="image"
           />
           <div class="Product-description">
             <p name="Classic-NW-Hoodie" class="product-header product-Title">
-              Classic N1ghtW0lf04 Hoodie
+              Classic S-I-S SQUAD Hoodie
             </p>
             <span class="shipping">
               <svg
@@ -496,7 +497,7 @@
             <span class="available-colours">
               <div class="coloured-blocks" id="black-block"></div>
               <div class="coloured-blocks" id="White-block"></div>
-              <div class="coloured-blocks" id="Grey-block"></div>
+              <div class="coloured-blocks" id="red-block"></div>
             </span>
             <span class="pricing">
               <p class="original-price">£54.99</p>
@@ -504,7 +505,7 @@
             </span>
             <span class="product-page-links">
               <a
-                href="/HTML/Products/N1ghtW0lf04/Hoodies/N1ghtW0lf04-hoodie.html"
+                href="/HTML/Products/Team/Hoodies/sis-squad-team-hoodie.html"
                 class="product-page-link"
                 >More Info</a
               >
