--- a/Home.html
+++ b/Home.html
@@ -260,6 +260,7 @@
                     min="1"
                     max="10"
                     placeholder="1"
+                    value="1"
                   />
                 </div>
               </div>
@@ -355,6 +356,7 @@
                     min="1"
                     max="10"
                     placeholder="1"
+                    value="1"
                   />
                 </div>
               </div>
@@ -449,6 +451,7 @@
                     min="1"
                     max="10"
                     placeholder="1"
+                    value="1"
                   />
                 </div>
               </div>
@@ -543,6 +546,7 @@
                     min="1"
                     max="10"
                     placeholder="1"
+                    value="1"
                   />
                 </div>
               </div>
@@ -616,6 +620,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <script src="basket-createItems.js"></script>
+    <script src="/JavaScript/basket.js"></script>
   </body>
 </html>
