--- a/HTML/Header-links/All.html
+++ b/HTML/Header-links/All.html
@@ -27,6 +27,7 @@
       href="https://fonts.googleapis.com/css2?family=Carattere&display=swap"
       rel="stylesheet"
     />
+    <link href="/Style/Page styles/Banner-links/Basket.css" rel="stylesheet" />
     <title>S-I-S SQUAD</title>
   </head>
   <body>
