added footer to test home page as a component

--- a/TestHomepage.html
+++ b/TestHomepage.html
@@ -91,7 +91,7 @@
       </div> -->
     </section>
 
-    <!-- <section class="Body-content">
+    <section class="Body-content">
       <div class="Merch-header">
         <h2 class="heading-secondary">Our Products!</h2>
       </div>
@@ -543,92 +543,16 @@
           >View All</a
         >
       </div>
-    </section> -->
+    </section>
 
     <footer class="footer">
-      <span class="footer-content">
-        <div class="Footer-img">
-          <img
-            class="footer-logo"
-            src="Images/Merch/Team/Logo/Footer Logo.png"
-            alt="logo" />
-        </div>
-        <div class="footer-grid">
-          <div class="footer-grid-left">
-            <p class="apologies">
-              Apologies as we currently do not have a physical location for you
-              to reach out to us. However we have our social media and content
-              platforms where we may be reachable.
-            </p>
-          </div>
-          <div class="Details">
-            <a
-              class="Detail-links"
-              href="/HTML/footer-links/About-us.html"
-              >About Us</a
-            >
-            <a
-              class="Detail-links"
-              href="#"
-              >FAQs</a
-            >
-            <a
-              class="Detail-links"
-              href="#"
-              >Contact Us</a
-            >
-            <a
-              class="Detail-links"
-              href="#"
-              >Terms & Service</a
-            >
-            <a
-              class="Detail-links"
-              href="#"
-              >Privacy Policy</a
-            >
-          </div>
-          <div class="Our-links">
-            <a
-              class="social-links"
-              href="#"
-              >N1ghtW0lf04</a
-            >
-            <a
-              class="social-links"
-              href="https://beacons.ai/ferralwolf2003"
-              >FerralWolf2003</a
-            >
-            <a
-              class="social-links"
-              href="#"
-              >ibedrippinYT</a
-            >
-          </div>
-        </div>
-        <div class="footer-social-icons">
-          <ion-icon
-            class="footer-icon yt"
-            name="logo-youtube"></ion-icon>
-          <ion-icon
-            class="footer-icon twitch"
-            name="logo-twitch"></ion-icon>
-          <ion-icon
-            class="footer-icon fb"
-            name="logo-facebook"></ion-icon>
-          <ion-icon
-            class="footer-icon twitter"
-            name="logo-twitter"></ion-icon>
-          <ion-icon
-            class="footer-icon insta"
-            name="logo-instagram"></ion-icon>
-          <p class="copyright">&copy; 2026 S-I-S SQUAD</p>
-        </div>
-      </span>
+      <completeFooter></completeFooter>
     </footer>
     <script type="module">
       import completeHeader from "./JavaScript/Components/Header/completeHeader.js";
       Vue.createApp(completeHeader).mount(".content");
+      import completeFooter from "./JavaScript/Components/Footer/completeFooter.js";
+      Vue.createApp(completeFooter).mount(".footer");
     </script>
     <script
       type="module"
